--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -76,7 +76,7 @@ jobs:
         sudo curl -sL -o /usr/bin/caddy https://github.com/OPPEN321/caddy/releases/download/v2.10.2/caddy-amd64
         sudo chmod 755 /usr/bin/caddy
         echo ":8080 {" > caddyfile
-        echo "    root * $(pwd)/r4s_build_script" >> caddyfile
+        echo "    root * $(pwd)/immortalwrt-mt798x-action" >> caddyfile
         echo "    file_server browse" >> caddyfile
         echo "}" >> caddyfile
         sudo /usr/bin/caddy start --config caddyfile --adapter caddyfile
