--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -185,7 +185,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: ${{ env.build_dir }}/rom/*
         body: |
-          **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
+          **This is OpenWrt Firmware for Mediatek Filogic**
           ### 📒 固件信息
           - 💻 平台架构: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
           - ⚽ 固件源码: https://github.com/QuickWrt/immortalwrt-mt798x
@@ -196,7 +196,7 @@ jobs:
           - 🆔 默认 WIFI 密码：1234567890
           - 🔑 默认密码: password
           ### 🧊 固件版本
-          - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
+          - 固件编译前最后一次➦[主源码](https://github.com/QuickWrt/immortalwrt-mt798x)更新记录
           - ${{ env.COMMIT_AUTHOR }}
           - ${{ env.COMMIT_DATE }}
           - ${{ env.COMMIT_MESSAGE }}
